--- a/main.html
+++ b/main.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Styling Test</title>
+    <title>HTML and CSS Styling Test</title>
 </head>
 <body>
 
     <div class="main">
-        <h1 class="heading" id="heading">This is a Heading</h1>
+        <h1 id="heading" class="heading">This is a Heading</h1>
     </div>
 
 </body>
