--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="styles.css">
     <title>HTML and CSS Styling Test</title>
 </head>
 <body>
